<resources>
    <string name="app_name">
        ImFitPlus
    </string>

    <string name="bannerimage">
        bannerImage
    </string>

    <string name="continue_button">
        Comece aqui
    </string>

    <string name="app_welcome_message">
        Seja bem-vindo ao I\'m Fit Plus
    </string>

    <string name="app_description">
       Descubra seu perfil de saúde e receba recomendações personalizadas.
    </string>
    <string name="name_input_placeholder">Nome completo</string>
    <string name="age_input_placeholder">Data de nascimento</string>
    <string name="height_m_input">Altura (m)</string>
    <string name="weight_kg_input">Peso (KG)</string>
    <string name="back_label">Voltar</string>
    <string name="calculate_imc_label">Calcular IMC</string>
    <string name="calculate_calories_spent">Calcular Gasto Calórico</string>

    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="gender_label">Gênero</string>
    <string name="sport_practice_label">Nível de prática esportiva</string>
    <string name="hello_world">Olá, mundo!</string>
    <string name="calculate_ideal_weight">Calcular Peso ideal</string>
    <string name="end_activities">Finalizar</string>
    <string name="tell_weight">Informe seu peso</string>
    <string name="tell_height">Informe sua altura</string>
    <string name="tell_age">Informe sua data de nascimento no formato (yyyy/aa/dd).</string>
    <string name="tell_name">Informe seu nome</string>
    <string name="low_weight_category"><![CDATA[< 18.5 → Abaixo do peso]]></string>
    <string name="normal_weight_category">18.5 – 24.9 → Normal</string>
    <string name="over_weight_category">25 – 29.9 → Sobrepeso</string>
    <string name="obesity">≥ 30 → Obesidade</string>
    <string name="overviw">Relatório</string>
    <string name="see_history">Ver histórico</string>
    <string name="finish">Finalizar</string>

    <string-array name="sports_levels_labels">
        <item>Sedentário</item>
        <item>Leve</item>
        <item>Moderado</item>
        <item>Intenso</item>
    </string-array>
</resources>